styles.css
:root {
    /* turtle color palette */
    --moonstone: #59b8c7ff;
    --moonstoneshadow: #59b8c781;
    --blue-munsell: #008fa0ff;
    --moonstone-2: #2eb0c0ff;
    --reseda-green: #6b8260ff;
    --dark-moss-green: #435929ff;
}

* {
    padding: 0px;
    margin: 0px;
}

@font-face {
    font-family: odin;
    src: url(Norse-Bold.otf);
}

body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
}

.container {
    display: flex;
}

.sidepic {
    display: flex;
    flex-direction: column;
    justify-content:space-between;
    align-items: center;

    background-image: url("turtlebg.jpg");
    background-size: cover;
    height: 100vh;
    flex: 1;
}

.logo {
    display: flex;
    width: 100%;
    background-color: #1d1d1d;
    opacity: 65%;
    justify-content: center;
    align-items: center;
    margin-top: 25%;
    padding: 10px;
    box-sizing: border-box;
}

.odinLogo {
   width: auto;
   height: min(150px, 100vh);
}

.logo h1 {
    color: white;
    font-family: odin;
    font-size: 3em;
}

.photocredit {
    color: white;
    font-weight: bold;
    font-size: 12px;
    text-align: center;
    width: 100%;
    background-color: #1d1d1d75;
}
.photocredit a {
    color: white;
    font-weight: bold;
    text-decoration: none;
}



.formsection {
    background-color: #e5e5e5;
    flex: 1.5;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.formText{
    max-width: 60ch;
}

.formText p {
    margin-top: 30px;
}

.formsection>div{
    padding: 30px;
}

.forms {
    padding: 30px;
    background-color: #e6e6e6;
    box-shadow: 0px 5px 10px 1px rgb(88, 88, 88);
    border-radius: 1px;
}


.formbox {
    margin: 10px 30px 10px 0px;
    font-family: 'Courier New', Courier, monospace;
    font-size: .7em;
}

.formbox input {
    border-radius: 3px;
    border: 1px solid grey;
    font-size: inherit;
    padding: 5px;
    
}

.formbox input:focus {
    border: 2px solid var(--blue-munsell);
    outline: none;
    padding: 4px;
    box-shadow: 2px 2px 1px 1px var(--moonstoneshadow);
}

.formbox label {
    display: block;
}

.formRow {
    display: flex;
    justify-content:flex-start
}

.createAccount {
    padding: 10px 40px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: .8em;
    margin-bottom: 10px;
    border-radius: 10px;
    background-color: var(--dark-moss-green);
    color: #ffffff;
}

.account {
    font-size: .8em;
}

input[type="password"].error{
    border-color: red;
}

#passworderrors.error::after {
    content: "*Passwords do not match";
    position: absolute;
    margin-top: -5px;
    font-size: .5em;
    color: #ff0000;
}

